<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/blue"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="10dp"
                        android:text="Learning"
                        android:textSize="20sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="10dp"
                        android:text="Never stop Learning, Because Life never stop teaching"
                        android:textSize="16sp"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:text="@string/tv_name"
                android:textSize="22sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvUnitKerja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:text="@string/tv_unit_kerja"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvJam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/tv_jam"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:text="@string/tv_tanggal"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_gravity="center"
                android:text="@string/tv_status"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:text="@string/tv_total"
                android:textSize="17sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnMasuk"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:background="@color/blue"
                android:text="@string/btn_masuk"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnKeluar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:backgroundTint="@color/red"
                android:text="@string/btn_keluar"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>